--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 
     <!-- En-tête -->
     <header id="accueil">
-        <h1>Bienvenue sur le site de Nlm Lutumba Mardochée</h1>
+        <h1>BIENVENUE, WELCOME, BOYELI ELAMU <h1/>
+        <h1>Nlm Lutumba Mardochée</h1>
         <p>Étudiant passionné par l'informatique, le développement web, et les outils numériques.</p>
     </header>
 
